# Carrot

./: .env  .gitignore  AWS_DEPLOYMENT.md  CORS_FIX.md  CREATE_API_GATEWAY.md  FINAL_DEPLOYMENT.md  GET_API_URL.md  LAMBDA_UPLOAD.md  LAMBDA_ZIP_GUIDE.md  README.md  RESOURCE_EXPLANATION.md  SIMPLE_SETUP.md  app.py  create_table.sql  index.html  lambda_debug.py  lambda_function.py  lambda_handler_lite.py  lambda_requirements.txt  pyproject.toml  rxconfig.py  server.py
.github/workflows/: deploy.yml
code/: __init__.py  code.py  code_aws.py
lambda/: lambda.py
lambda_deploy/: lambda_function.py
lambda_deploy/charset_normalizer-3.4.4.dist-info/: RECORD
lambda_deploy/httpx-0.28.1.dist-info/: RECORD
lambda_deploy/markdown_it_py-4.0.0.dist-info/: RECORD
lambda_deploy/mmh3-5.2.0.dist-info/: RECORD
lambda_deploy/postgrest-2.27.2.dist-info/: RECORD
lambda_deploy/pygments-2.19.2.dist-info/: RECORD
lambda_deploy/pyiceberg-0.10.0.dist-info/: RECORD
lambda_deploy/pyroaring-1.0.3.dist-info/: RECORD
lambda_deploy/realtime-2.27.2.dist-info/: RECORD
lambda_deploy/storage3-2.27.2.dist-info/: RECORD
lambda_deploy/supabase-2.27.2.dist-info/: RECORD
lambda_deploy/supabase_auth-2.27.2.dist-info/: RECORD
lambda_deploy/supabase_functions-2.27.2.dist-info/: RECORD
lambda_deploy/websockets-15.0.1.dist-info/: RECORD
lambda_simple/: lambda_function.py
